# workspace-for-agents

./: .gitignore  README.md  logs.json  logs.txt  pyproject.toml
src/: test_lib.py
src/envs/: test_env_1.json
src/envs/files/: diagnoses.json
src/envs/files/HR/profiles/: profiles.md
src/envs/files/READMEs/machine-learning/: conllueditor.md  wikifactdiff.md
src/envs/files/READMEs/voIP/: kamailio.md
src/envs/files/READMEs/web-dev/: iot-map-component.md  ouds-flutter.md  ouds-ios.md
src/envs/files/Reseau boucle locale cuivre/: indicateurs de QoS de l'acces cuivre.html  offres de reference.html
src/envs/files/Reseau boucle locale cuivre/Les NRA d'Orange/: Liste NRA perennes V4_Sept2024.xlsx  Programme de fermeture NRA Orange.xlsx
src/envs/files/Reseau boucle locale cuivre/indicateurs de QoS de l'acces cuivre_1/Music/: Zone.sav
src/envs/files/Reseau boucle locale cuivre/offre de reference/: Zonage par commune pour l'offre de boucle locale cuivre.xlsx  donnees techniques de l'offre DSL.html
src/workspace_for_agents/: __init__.py  actions.py  agent.py  employee.py  environment.py  environnement.py  file_system.py  llm_client.py  mail.py  task.py  utils.py
src/workspace_for_agents/tasks/: generic_conditions.py  send_mail_to_candidate.py  send_sva_files.py  send_wishes_full_company.py  send_wishes_full_company_with_email_change.py
